--- a/server1/mq/pom.xml
+++ b/server1/mq/pom.xml
@@ -1,1 +1,22 @@
+<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream</artifactId>
+       <version>3.1.1</version>
+        </dependency>
+<dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rocketmq</artifactId>
+        </dependency>
+<plugin>
+  <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-maven-plugin</artifactId>
+   <version>2.7.7</version>
+                <configuration>
+                    <skip>true</skip>
+  </configuration>
+            </plugin>
 
