--- a/server1/redis.yml
+++ b/server1/redis.yml
@@ -1,1 +1,22 @@
+spring:
+  redis:
+      database: 6
+      host: 10.xx.xx.xx
+      port: 6379
+      # password: 
+      timeout: 10s
+      lettuce:
+        pool:
+          min-idle: 0
+          max-idle: 8
+          max-active: 8
+          max-wait: -1ms
+redisson:
+  threads: 4
+  nettyThreads: 8
+  singleServerConfig:
+    connectionMinimumIdleSize: 8
+    connectionPoolSize: 32
+    idleConnectionTimeout: 10000
+    timeout: 3000
 
