--- a/server1/common/pom.xml
+++ b/server1/common/pom.xml
@@ -1,1 +1,23 @@
 
+<dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+          <version>3.19.2</version>
+         <exclusions>
+                <exclusion>
+                   <groupId>org.redisson</groupId>
+                  <artifactId>redisson-spring-data-30</artifactId>
+                  </exclusion>
+            </exclusions>
+        </dependency>
+
+<dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-data-26</artifactId>
+          <version>3.19.2</version>
+        </dependency>
+ <!-- Spring Data Redis -->
+<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
